# cpp_trial

./: .gitignore  CMakeLists.txt  README.md  ac_test.cpp  ac_test.h  ac_tree.cpp  ac_tree.h  biginteger.h  func.h  kmp.cpp  kmp.h  main.cpp  temp.h  test.pro
src/: CMakeLists.txt  ac_tree.cpp  ac_tree.h  bzc_db_pp.cpp  bzc_db_pp.h  func.h  hhh.cpp  kmp.cpp  kmp.h  main.cpp  multi_thread.h  temp.cpp  test.h  test_db_pp.h  test_shared_ptr.h  tree.h
src/algorithm/: ac_tree.cpp  ac_tree.h  biginteger.h  kmp.cpp  kmp.h  temp.h  tree.h
src/cnc/: bzc_db_pp.cpp  bzc_db_pp.h  test_db_pp.h
src/cnc/third_part/: clipper.cpp  clipper.hpp
src/old/: func.h  multi_thread.h  old_main.cpp  test.h  test_shared_ptr.h
src/opencv/: some_trial.h
src/other/: CMakeLists.txt  algorithm_trial.cpp  algorithm_trial.h  array_trial.cpp  class_trial.cpp  class_trial.h  class_tril.h  copy_trial.cpp  data_bss_trial.cpp  exception_trial.cpp  function_trial.cpp  new_delete_trial.cpp  pointer.h  pointer_trial.cpp  reflect.cpp  shared_ptr_trial.cpp  shared_ptr_trial.h  stream_trial.cpp  stream_trial.h  string_trial.cpp  vector_trial.cpp  vector_trial.h  vector_trial2.cpp  virtual_table_trial.cpp  wstring_trial.cpp
src/python/: python_trial.cpp  test.h
src/template/: CMakeLists.txt  op.cc  op.h  op_test.cc
src/third/: CMakeLists.txt
src/third/linux/: CMakeLists.txt  test.cpp  uuid_trial.h
src/third/opencv/: CMakeLists.txt  test.cpp
src/third/python/: CMakeLists.txt  test.cpp  test.h
src/third/tbb/: CMakeLists.txt  tbb_trial.h  test.cpp
