add_executable(algorithm_trial algorithm_trial.cpp)
add_executable(array_trial array_trial.cpp)
add_executable(class_trial class_trial.cpp)
add_executable(copy_trial copy_trial.cpp)
add_executable(data_bss_trial data_bss_trial.cpp)
add_executable(exception_trial exception_trial.cpp)
add_executable(function_trial function_trial.cpp)
add_executable(new_delete_trial new_delete_trial.cpp)
add_executable(pointer_trial pointer_trial.cpp)
add_executable(reflect reflect.cpp)
add_executable(shared_ptr_trial shared_ptr_trial.cpp)
add_executable(stream_trial stream_trial.cpp)
add_executable(string_trial string_trial.cpp)
add_executable(vector_trial vector_trial.cpp)
add_executable(vector_trial2 vector_trial2.cpp)
add_executable(virtual_table_trial virtual_table_trial.cpp)
add_executable(wstring_trial wstring_trial.cpp)
